Fix JavaScript path in the pricing template, wrap the block_content into a section and make the necessary adjustments

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,6 +18,10 @@ h4 {
     margin: 0;
 }
 
+.block-content {
+    min-height: 75vh;
+}
+
 a:hover {
     text-decoration: none;
 }
@@ -197,7 +201,6 @@ nav {
 
 /* ------- HOME ------- */
 .hero {
-    height: 79vh;
     position: relative;
 }
 
@@ -478,7 +481,7 @@ select:invalid {
 
 /* Allauth */
 .allauth-wrapper {
-    min-height: 79vh;
+    min-height: 75vh;
 }
 
 .btn-allauth {
@@ -612,8 +615,11 @@ select:invalid {
         height: 85vh;
     }
     
+    .block-content {
+        min-height: 60vh;
+    }
+    
     .hero {
-        height: 60vh;
         display: flex;
         justify-content: center;
     }
@@ -634,5 +640,9 @@ select:invalid {
 
     .intro-animation p {
         font-size: 2.5rem;
+    }
+
+    footer {
+        min-height: 20vh;
     }
 }
